@@ -3,6 +3,7 @@
 	  it logs what is ratelimited for operational inspection.
 	- unit test for rrl.
 	- rrl uses mmap to save state across reloads.
+	- rrl enum and u16 flags (dnskey type).
 
 8 October 2012: Wouter
 	- Sync with unbound lookup3, has raninit value.
